--- a/automacoes.html
+++ b/automacoes.html
@@ -7,38 +7,41 @@
     <link rel="stylesheet" href="CSS/serial.css">
     <link rel="stylesheet" href="CSS/styles.css">
     
-    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Página Principal</a></li>
+                <li><a href="/index.html">Página Principal</a></li>
                 
-                <li><a href="emails.html">Script de E-mails</a></li>
+                <li><a href="/emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropbtn active">Automação/Atalhos</a>
+                    <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
-                        <a href="atalhos.html">Atalhos</a>
-                        <a href="comprar-lista.html">Comparar Lista</a>
-                        <a href="adds.html">Adicionar S</a>
-                        <a href="garantia.html">Definir Garantia</a>
-                        <a href="verificarnf.html">Verificar NF</a>
-                        <a href="revendagarantia.html">Definir Garantia Revenda</a>
-                        <a href="conferencia-valores.html">Conferir Valores Unitário</a>
+                        <a href="/atalhos.html">Atalhos</a>
+                        <a href="/comprar-lista.html">Comparar Lista</a>
+                        <a href="/adds.html">Adicionar S</a>
+                        <a href="/garantia.html">Definir Garantia</a>
+                        <a href="/verificarnf.html">Verificar NF</a>
+                        <a href="/revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="/conferencia-valores.html">Conferir Valores Unitário</a>
                     </div>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Pesquisas</a>
                     <div class="dropdown-content">
-                        <a href="serial.html">Pesquisa Serial</a>
-                        <a href="lvp.html">Pesquisa PA (LVP)</a>
-                        <a href="os.html">Abrir OS</a>
-                        <a href="nf.html">Baixar NF</a>
-                        <a href="visao.html">Romaneio Visão</a>
-                        <a href="garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="/pesquisas/os.html">Abrir OS</a>
+                        <a href="/pesquisas/nf.html">Baixar NF</a>
+                        <a href="/pesquisas/visao.html">Romaneio Visão</a>
+                        <a href="/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
+                        <a href="/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
+                        <a href="/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
                     </div>
                 </li>
             </ul>
