--- a/adds.html
+++ b/adds.html
@@ -13,14 +13,14 @@
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Página Principal</a></li>
+                <li><a href="index.html">Página Principal</a></li>
                 
-                <li><a href="/emails.html">Script de E-mails</a></li>
+                <li><a href="../emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
-                        <a href="/atalhos.html">Atalhos</a>
+                        <a href="../atalhos.html">Atalhos</a>
                         <a href="/comprar-lista.html">Comparar Lista</a>
                         <a href="/adds.html">Adicionar S</a>
                         <a href="/garantia.html">Definir Garantia</a>
@@ -78,5 +78,6 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
