--- a/adds.html
+++ b/adds.html
@@ -32,9 +32,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Pesquisas</a>
                     <div class="dropdown-content">
-                        <a href="/pesquisas/serial.html">Pesquisa Serial</a>
-                        <a href="/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
-                        <a href="/pesquisas/os.html">Abrir OS</a>
+                        <a href="pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="../pesquisas/os.html">Abrir OS</a>
                         <a href="/pesquisas/nf.html">Baixar NF</a>
                         <a href="/pesquisas/visao.html">Romaneio Visão</a>
                         <a href="/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
@@ -78,6 +78,7 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
