--- a/adds.html
+++ b/adds.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar 'S' aos Itens</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/comparar.css"> 
+    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/comparar.css"> 
     
     <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
 </head>
@@ -13,14 +13,14 @@
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Página Principal</a></li>
+                <li><a href="/index.html">Página Principal</a></li>
                 
-                <li><a href="../emails.html">Script de E-mails</a></li>
+                <li><a href="/emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
-                        <a href="../atalhos.html">Atalhos</a>
+                        <a href="/atalhos.html">Atalhos</a>
                         <a href="/comprar-lista.html">Comparar Lista</a>
                         <a href="/adds.html">Adicionar S</a>
                         <a href="/garantia.html">Definir Garantia</a>
@@ -32,9 +32,9 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Pesquisas</a>
                     <div class="dropdown-content">
-                        <a href="pesquisas/serial.html">Pesquisa Serial</a>
-                        <a href="pesquisas/lvp.html">Pesquisa PA (LVP)</a>
-                        <a href="../pesquisas/os.html">Abrir OS</a>
+                        <a href="/pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="/pesquisas/os.html">Abrir OS</a>
                         <a href="/pesquisas/nf.html">Baixar NF</a>
                         <a href="/pesquisas/visao.html">Romaneio Visão</a>
                         <a href="/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
@@ -78,6 +78,7 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
