--- a/adds.html
+++ b/adds.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar 'S' aos Itens</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="/CSS/comparar.css"> 
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/comparar.css"> 
     
     <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
 </head>
@@ -78,6 +78,7 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
