--- a/pesquisas/cliente-protheus.html
+++ b/pesquisas/cliente-protheus.html
@@ -14,7 +14,7 @@
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Página Principal</a></li>
+                <li><a href="index.html">Página Principal</a></li>
                 
                 <li><a href="/emails.html">Script de E-mails</a></li>
 
