--- a/adds.html
+++ b/adds.html
@@ -13,15 +13,15 @@
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Página Principal</a></li>
+                <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
                 
                 <li><a href="emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
-                        <a href="atalhos.html">Atalhos</a>
-                        <a href="comprar-lista.html">Comparar Lista</a>
+                        <a href="/Wdc-Ajudas/atalhos.html">Atalhos</a>
+                        <a href="/Wdc-Ajudas/comprar-lista.html">Comparar Lista</a>
                         <a href="adds.html">Adicionar S</a>
                         <a href="garantia.html">Definir Garantia</a>
                         <a href="verificarnf.html">Verificar NF</a>
@@ -32,8 +32,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Pesquisas</a>
                     <div class="dropdown-content">
-                        <a href="/pesquisas/serial.html">Pesquisa Serial</a>
-                        <a href="/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="/Wdc-Ajudas/pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="/Wdc-Ajudas/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
                         <a href="pesquisas/os.html">Abrir OS</a>
                         <a href="pesquisas/nf.html">Baixar NF</a>
                         <a href="../pesquisas/visao.html">Romaneio Visão</a>
@@ -78,6 +78,7 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
