--- a/adds.html
+++ b/adds.html
@@ -22,11 +22,11 @@
                     <div class="dropdown-content">
                         <a href="/Wdc-Ajudas/atalhos.html">Atalhos</a>
                         <a href="/Wdc-Ajudas/comprar-lista.html">Comparar Lista</a>
-                        <a href="adds.html">Adicionar S</a>
-                        <a href="garantia.html">Definir Garantia</a>
-                        <a href="verificarnf.html">Verificar NF</a>
-                        <a href="revendagarantia.html">Definir Garantia Revenda</a>
-                        <a href="conferencia-valores.html">Conferir Valores Unitário</a>
+                        <a href="/Wdc-Ajudas/adds.html">Adicionar S</a>
+                        <a href="/Wdc-Ajudas/garantia.html">Definir Garantia</a>
+                        <a href="/Wdc-Ajudas/verificarnf.html">Verificar NF</a>
+                        <a href="/Wdc-Ajudas/revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="/Wdc-Ajudas/conferencia-valores.html">Conferir Valores Unitário</a>
                     </div>
                 </li>
                 <li class="dropdown">
@@ -34,13 +34,13 @@
                     <div class="dropdown-content">
                         <a href="/Wdc-Ajudas/pesquisas/serial.html">Pesquisa Serial</a>
                         <a href="/Wdc-Ajudas/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
-                        <a href="pesquisas/os.html">Abrir OS</a>
-                        <a href="pesquisas/nf.html">Baixar NF</a>
-                        <a href="../pesquisas/visao.html">Romaneio Visão</a>
-                        <a href="../pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
-                        <a href="/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
-                        <a href="/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
-                        <a href="/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
+                        <a href="/Wdc-Ajudas/pesquisas/os.html">Abrir OS</a>
+                        <a href="/Wdc-Ajudas/pesquisas/nf.html">Baixar NF</a>
+                        <a href="/Wdc-Ajudas/pesquisas/visao.html">Romaneio Visão</a>
+                        <a href="/Wdc-Ajudas/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/Wdc-Ajudas/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
+                        <a href="/Wdc-Ajudas/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
+                        <a href="/Wdc-Ajudas/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
                     </div>
                 </li>
             </ul>
@@ -78,6 +78,7 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
