--- a/adds.html
+++ b/adds.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar 'S' aos Itens</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/comparar.css"> 
+    <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
+    <link rel="stylesheet" href="/Wdc-Ajudas/CSS/comparar.css"> 
     
-    <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <header class="main-header">
         <div class="logo">WDC AJUDAS</div>
@@ -78,6 +78,7 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
