--- a/pesquisas/serial.html
+++ b/pesquisas/serial.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa Serial</title>
-    <link rel="stylesheet" href="../CSS/serial.css"> 
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="/Wdc-Ajudas/CSS/serial.css"> 
+    <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
     
     <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
 </head>
@@ -14,20 +14,20 @@
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="/index.html">Página Principal</a></li>
+                <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
                 
-                <li><a href="/emails.html">Script de E-mails</a></li>
+                <li><a href="/Wdc-Ajudas/emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
-                        <a href="/atalhos.html">Atalhos</a>
-                        <a href="/comprar-lista.html">Comparar Lista</a>
-                        <a href="/adds.html">Adicionar S</a>
-                        <a href="/garantia.html">Definir Garantia</a>
-                        <a href="/verificarnf.html">Verificar NF</a>
-                        <a href="/revendagarantia.html">Definir Garantia Revenda</a>
-                        <a href="/conferencia-valores.html">Conferir Valores Unitário</a>
+                        <a href="/Wdc-Ajudas/atalhos.html">Atalhos</a>
+                        <a href="/Wdc-Ajudas/comprar-lista.html">Comparar Lista</a>
+                        <a href="/Wdc-Ajudas/adds.html">Adicionar S</a>
+                        <a href="/Wdc-Ajudas/garantia.html">Definir Garantia</a>
+                        <a href="/Wdc-Ajudas/verificarnf.html">Verificar NF</a>
+                        <a href="/Wdc-Ajudas/revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="/Wdc-Ajudas/conferencia-valores.html">Conferir Valores Unitário</a>
                     </div>
                 </li>
                 <li class="dropdown">
@@ -88,6 +88,7 @@
             </div>
         </section>
     </main>
-    <script src="/JS/scripts.js"></script>
+    <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
+
 </html>
