--- a/adds.html
+++ b/adds.html
@@ -75,9 +75,10 @@
             document.getElementById('modified-items').value = modifiedItems.join('\n');
         });
     </script>
-    <script src="JS/scripts.js"></script>
+    <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
