--- a/conferencia-valores.html
+++ b/conferencia-valores.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
                 
-                <li><a href="emails.html">Script de E-mails</a></li>
+                <li><a href="/Wdc-Ajudas/emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
@@ -94,4 +94,5 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
 
