--- a/pesquisas/serial.html
+++ b/pesquisas/serial.html
@@ -33,15 +33,15 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Pesquisas</a>
                     <div class="dropdown-content">
-                        <a href="/pesquisas/serial.html">Pesquisa Serial</a>
-                        <a href="/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
-                        <a href="/pesquisas/os.html">Abrir OS</a>
-                        <a href="/pesquisas/nf.html">Baixar NF</a>
-                        <a href="/pesquisas/visao.html">Romaneio Visão</a>
-                        <a href="/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
-                        <a href="/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
-                        <a href="/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
-                        <a href="/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
+                        <a href="/Wdc-Ajudas//pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="/Wdc-Ajudas//pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="/Wdc-Ajudas//pesquisas/os.html">Abrir OS</a>
+                        <a href="/Wdc-Ajudas//pesquisas/nf.html">Baixar NF</a>
+                        <a href="/Wdc-Ajudas//pesquisas/visao.html">Romaneio Visão</a>
+                        <a href="/Wdc-Ajudas//pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/Wdc-Ajudas//pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
+                        <a href="/Wdc-Ajudas//pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
+                        <a href="/Wdc-Ajudas//pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
                     </div>
                 </li>
             </ul>
@@ -92,3 +92,4 @@
 </body>
 
 </html>
+
