--- a/pesquisas/cliente-protheus.html
+++ b/pesquisas/cliente-protheus.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/serial.css"> 
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
     
-    <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
@@ -92,4 +92,5 @@
     <script src="/JS/scripts.js"></script>
 </body>
 </html>
+
 
