--- a/pesquisas/garantiafabricante.html
+++ b/pesquisas/garantiafabricante.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css"> 
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/garantiafabricante.css">
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/serial.css"> 
-    <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
@@ -95,3 +95,4 @@
 </body>
 
 </html>
+
