--- a/pesquisas/nf-remessa.html
+++ b/pesquisas/nf-remessa.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/serial.css"> 
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
     
-    <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
    <header class="main-header">
@@ -91,3 +91,4 @@
 </body>
 
 </html>
+
