--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/serial.css"> 
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/garantiafabricante.css">
-    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
@@ -62,15 +62,15 @@
 
         <section class="news-section">
             <h2>Novidades e Avisos Importantes 📣</h2>
-            <div class="news-feed">
-                <div class="news-item alert-new">
-                    <strong>[NOVO!] Interface Atualizada:</strong> A plataforma recebeu um upgrade visual para um layout mais eficiente.
+                <div class="news-item alert-update">
+                    <strong>[ADICIONADO] Novas informações de pesquisas adiconadas:</strong> Foi adicionado novas informações de como efetuar pesquisas do setor.
                 </div>
                 <div class="news-item alert-tip">
                     <strong>[DICA RÁPIDA] Pesquisa Rápida:</strong> Use a barra de pesquisa no canto superior direito para localizar páginas rapidamente (ex: "NF" ou "serial").
                 </div>
-                <div class="news-item alert-update">
-                    <strong>[ADICIONADO] Novos Scripts:</strong> Foi adicionado novos Scripts e suas funcionalidades.
+                <div class="news-feed">
+                <div class="news-item alert-new">
+                    <strong>[NOVO!] Interface Atualizada:</strong> A plataforma recebeu um upgrade visual para um layout mais eficiente.
                 </div>
             </div>
         </section>
@@ -84,4 +84,5 @@
     <script src="/Wdc-Ajudas/JS/search.js"></script>
 </body>
 </html>
+
 
