--- a/emails.html
+++ b/emails.html
@@ -4,45 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de E-mails Automáticos</title>
-    <link rel="stylesheet" href="CSS/emails.css">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+    <link rel="stylesheet" href="/Wdc-Ajudas/CSS/emails.css">
+    <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Página Principal</a></li>
+                <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
                 
-                <li><a href="emails.html" class="active">Script de E-mails</a></li>
+                <li><a href="emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
-                        <a href="atalhos.html">Atalhos</a>
-                        <a href="comprar-lista.html">Comparar Lista</a>
-                        <a href="adds.html">Adicionar S</a>
-                        <a href="garantia.html">Definir Garantia</a>
-                        <a href="verificarnf.html">Verificar NF</a>
-                        <a href="revendagarantia.html">Definir Garantia Revenda</a>
-                        <a href="conferencia-valores.html">Conferir Valores Unitário</a>
+                        <a href="/Wdc-Ajudas/atalhos.html">Atalhos</a>
+                        <a href="/Wdc-Ajudas/comprar-lista.html">Comparar Lista</a>
+                        <a href="/Wdc-Ajudas/adds.html">Adicionar S</a>
+                        <a href="/Wdc-Ajudas/garantia.html">Definir Garantia</a>
+                        <a href="/Wdc-Ajudas/verificarnf.html">Verificar NF</a>
+                        <a href="/Wdc-Ajudas/revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="/Wdc-Ajudas/conferencia-valores.html">Conferir Valores Unitário</a>
                     </div>
                 </li>
-
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Pesquisas</a>
                     <div class="dropdown-content">
-                        <a href="serial.html">Pesquisa Serial</a>
-                        <a href="lvp.html">Pesquisa PA (LVP)</a>
-                        <a href="os.html">Abrir OS</a>
-                        <a href="nf.html">Baixar NF</a>
-                        <a href="visao.html">Romaneio Visão</a>
-                        <a href="garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/Wdc-Ajudas/pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="/Wdc-Ajudas/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="/Wdc-Ajudas/pesquisas/os.html">Abrir OS</a>
+                        <a href="/Wdc-Ajudas/pesquisas/nf.html">Baixar NF</a>
+                        <a href="/Wdc-Ajudas/pesquisas/visao.html">Romaneio Visão</a>
+                        <a href="/Wdc-Ajudas/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/Wdc-Ajudas/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
+                        <a href="/Wdc-Ajudas/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
+                        <a href="/Wdc-Ajudas/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
                     </div>
                 </li>
             </ul>
         </nav>
+        <input type="text" placeho
         <input type="text" placeholder="Pesquisar..." class="search-bar">
     </header>
     <main class="content">
@@ -192,9 +195,10 @@
         </div>
     </main>
     
-    <script src="JS/sac.js"></script>
-    <script src="JS/apoio_vendas.js"></script>
-    <script src="JS/emails.js"></script>
-    <script src="JS/scripts.js"></script>
+    <script src="/Wdc-Ajudas/JS/sac.js"></script>
+    <script src="/Wdc-Ajudas/JS/apoio_vendas.js"></script>
+    <script src="/Wdc-Ajudas/JS/emails.js"></script>
+    <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
