--- a/pesquisas/visao.html
+++ b/pesquisas/visao.html
@@ -88,9 +88,9 @@
                 <div class="carousel">
                     <button class="carousel-button prev" disabled>❮</button>
                     <div class="carousel-images">
-                        <img src="imgs/pesquisa.png" alt="Passo 1">
-                        <img src="imgs/modalidade.png" alt="Passo 2">
-                        <img src="imgs/filial.png" alt="Passo 3">
+                        <img src="/Wdc-Ajudas/imgs/pesquisa.png" alt="Passo 1">
+                        <img src="/Wdc-Ajudas/imgs/modalidade.png" alt="Passo 2">
+                        <img src="/Wdc-Ajudas/imgs/filial.png" alt="Passo 3">
                     </div>
                     <button class="carousel-button next">❯</button>
                 </div>
@@ -137,4 +137,5 @@
 </body>
 
 </html>
+
 
