--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             </p>
         </section>
 
+        <div id="global-alert-card" class="news-item alert-important" style="display: none;">
+            <strong>[AVISO GERAL] BUG IDENTIFICADO:</strong> A barra de pesquisa não esta funcionando dentro das paginas de Pesquisas, estamos analisando o erro para corrigir o mais breve possivel.
+        </div>
         <hr>
 
         <section class="news-section">
@@ -84,5 +87,3 @@
     <script src="/Wdc-Ajudas/JS/search.js"></script>
 </body>
 </html>
-
-
