--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
 
         <div id="global-alert-card" class="news-item alert-important" style="display: none;">
-            <strong>[AVISO GERAL] BUG IDENTIFICADO:</strong> A barra de pesquisa não esta funcionando dentro das paginas de Pesquisas, estamos analisando o erro para corrigir o mais breve possivel.
+            <strong>[AVISO GERAL] BUG IDENTIFICADO:</strong> A barra de pesquisa não esta funcionando corretamente, estamos analisando o erro para corrigir o mais breve possivel.
         </div>
         <hr>
 
@@ -87,3 +87,4 @@
     <script src="/Wdc-Ajudas/JS/search.js"></script>
 </body>
 </html>
+
