--- a/atalhos.html
+++ b/atalhos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/styles.css">
     <link rel="stylesheet" href="/Wdc-Ajudas/CSS/atalhos.css">
     
-    <link rel="icon" href="/imgs/wdc.png" type="image/x-icon">
+    <link rel="icon" href="/Wdc-Ajudas/imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
     <header class="main-header">
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
                 
-                <li><a href="emails.html">Script de E-mails</a></li>
+                <li><a href="/Wdc-Ajudas/emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
@@ -96,4 +96,5 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
 
