--- a/pesquisas/nf-remessa.html
+++ b/pesquisas/nf-remessa.html
@@ -50,7 +50,7 @@
     </header>
 
     <main class="content">
-        <section id="pesquisa-nota-remessa">
+        <section id="pesquisa-serial">
             <h1>Pesquisa Nota de Remessa por Nota de Baixa (Módulo 5)</h1>
             
             <div class="step">
@@ -91,4 +91,5 @@
 </body>
 
 </html>
+
 
