--- a/pesquisas/nf-remessa.html
+++ b/pesquisas/nf-remessa.html
@@ -51,13 +51,12 @@
 
     <main class="content">
         <section id="pesquisa-serial">
-            <h1>Pesquisa Nota de Remessa por Nota de Baixa (Módulo 5)</h1>
+            <h1>Pesquisa Nota de Remessa por Nota de Baixa</h1>
             
             <div class="step">
-                <h2>Acessando Pedidos de Venda</h2>
+                
+                <h2>Modulo 5 - Atualizações</h2>
                 <ul class="nested">
-                    <li>Acesse: <strong>Atualização</strong></li>
-                    <ul>
                         <li><strong>Pedidos</strong></li>
                         <ul>
                             <li><strong>Pedidos de venda</strong></li>
@@ -91,5 +90,6 @@
 </body>
 
 </html>
+
 
 
