--- a/pesquisas/nf.html
+++ b/pesquisas/nf.html
@@ -50,13 +50,13 @@
     </header>
 
     <main class="content">
-        <section id="nota-fiscal">
+        <section id="pesquisa-serial">
             <h1>Baixar Nota Fiscal - Passo a Passo</h1>
 
             <div class="step">
-                <h2>Passos para Baixar a Nota Fiscal (Módulo 05)</h2>
+                <h2>Passos para Baixar a Nota Fiscal</h2>
                 <ul>
-                    <li>Acesse: <strong>Atualizações > NF-e e NFS-e > NF-e Sefaz</strong>.</li>
+                    <li><strong>Atualizações > NF-e e NFS-e > NF-e Sefaz</strong>.</li>
                     <li>Se aparecer uma janela pedindo para dar <strong>OK</strong> ou <strong>Cancelar</strong>, clique em <strong>OK</strong> (isso ocorrerá duas vezes).</li>
                 </ul>
             </div>
@@ -104,4 +104,5 @@
 </body>
 
 </html>
+
 
