Fix HTML encoding issues in adds.html

--- a/adds.html
+++ b/adds.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
                 
-                <li><a href="/emails.html">Script de E-mails</a></li>
+                <li><a href="/Wdc-Ajudas/emails.html">Script de E-mails</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
@@ -78,6 +78,7 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
