--- a/adds.html
+++ b/adds.html
@@ -13,7 +13,7 @@
         <div class="logo">WDC AJUDAS</div>
         <nav class="main-nav">
             <ul>
-                <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
+                <li><a href="/Wdc-Ajudas/index.html">Home Page</a></li>
                 
                 <li><a href="/Wdc-Ajudas/emails.html">Script de E-mails</a></li>
 
@@ -78,6 +78,7 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
 
 
 
