Fix HTML formatting and structure in emails.html

--- a/emails.html
+++ b/emails.html
@@ -65,7 +65,7 @@
                     <option value="devolucao">Devolução</option>
                     <option value="solicitar_entrada_nf">Solicitar entrada NF</option>
                     <option value="troca_solar">Troca em garantia - Solar</option>
-                    <option value="envio_material_devolucao">ENVIO DE MATERIAL - DEVOLUÇÃO</option>
+                    <option value="envio_material_devolucao">Envio de Material - Devolução</option>
                     <option value="ticket_para_advanceds">Ticket para advanceds</option>
                     <option value="recusa_nf">Recusa NF</option>
                     </select>
@@ -201,4 +201,5 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
 
