--- a/emails.html
+++ b/emails.html
@@ -14,9 +14,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
-                
                 <li><a href="emails.html">Script de E-mails</a></li>
-
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
@@ -45,9 +43,9 @@
                 </li>
             </ul>
         </nav>
-        <input type="text" placeho
         <input type="text" placeholder="Pesquisar..." class="search-bar">
     </header>
+
     <main class="content">
         <h3>Gerador de E-mails Automáticos</h3>
         <div class="email-configuration">
@@ -68,7 +66,9 @@
                     <option value="envio_material_devolucao">Envio de Material - Devolução</option>
                     <option value="ticket_para_advanceds">Ticket para advanceds</option>
                     <option value="recusa_nf">Recusa NF</option>
-                    </select>
+                    <option value="advanced_emissao_envio">Advanced - Emissão de NF + Envio</option>
+                    <option value="advanced_apenas_envio">Advanced - Apenas Envio do Material</option>
+                </select>
             </div>
 
             <div id="apoio-vendas-options" class="hidden">
@@ -94,13 +94,13 @@
                 <div id="primeiro-ticket-options" class="hidden">
                     <label for="produto-desc-input">Descrição do Produto:</label>
                     <input type="text" id="produto-desc-input">
-                    <label for="nf-input-postagem">NF de Retorno:</label> 
+                    <label for="nf-input-postagem">NF de Compra / Retorno:</label> 
                     <input type="text" id="nf-input-postagem">
                     <label for="ticket-input">Ticket:</label>
                     <input type="text" id="ticket-input">
                     
                     <div class="date-group">
-                        <label for="data-emissao-input">Data de Emissão:</label>
+                        <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
                         <input type="tel" id="data-emissao-input" maxlength="10" placeholder="DD/MM/AAAA"> 
                         <label for="data-validade-input">Data de Validade:</label>
                         <input type="tel" id="data-validade-input" maxlength="10" placeholder="DD/MM/AAAA">
@@ -145,7 +145,7 @@
                 <label for="destinatario">Destinatário:</label>
                 <select id="destinatario">
                     <option value="">Selecione</option>
-                    <option value="matriz">Matriz</option>
+                    <option value="matriz">Matriz (Ilhéus)</option>
                     <option value="simoes">Simões Filho</option>
                 </select>
             </div>
@@ -201,5 +201,3 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
-
-
