Fix HTML formatting and structure in emails.html

--- a/emails.html
+++ b/emails.html
@@ -99,7 +99,7 @@
 
             <div id="primeiro-ticket-options" class="hidden">
                 <label for="produto-desc-input">Descrição do Produto:</label>
-                <input type="text" id="produto-desc-input" placeholder="Ex: Antena Ubiquiti">
+                <input type="text" id="produto-desc-input" placeholder="Descrição do produto">
                 
                 <div class="date-group">
                     <div>
@@ -145,7 +145,7 @@
                 <label for="destinatario">Destinatário:</label>
                 <select id="destinatario">
                     <option value="">Selecione</option>
-                    <option value="matriz">Matriz (Ilhéus)</option>
+                    <option value="matriz">Matriz</option>
                     <option value="simoes">Simões Filho</option>
                 </select>
             </div>
@@ -201,3 +201,4 @@
     <script src="/Wdc-Ajudas/JS/scripts.js"></script>
 </body>
 </html>
+
